--- a/talks_workshops/2023-05-23-js-in-r/index.qmd
+++ b/talks_workshops/2023-05-23-js-in-r/index.qmd
@@ -32,19 +32,16 @@ An interactive map made with the `{leaflet}` R package.
 
 <br>
 
-<div class="container">
-<div class="center">
-<button type="button" class="button-styling" onclick=window.location.href='https://samanthacsik.github.io/SORTEE-May2023/'>{{< fa file-alt title="A file with lines of text" >}} instructional documentation</button>
-<button type="button" class="button-styling" onclick=window.location.href='https://github.com/samanthacsik/SORTEE-May2023'>{{< fa code title="A symbol for code, </>" >}} source code</button> 
-</div>
-</div>
-
-# Overview
-
-This workshop was developed for and taught during the [SORTEE Workshops and Webinar](https://www.sortee.org/other_events/) series.
+::: {.center-text}
+[{{< fa file-alt title="A file with lines of text" >}} materials](https://samanthacsik.github.io/SORTEE-May2023/){.btn .btn-secondary role="button"} [{{< fa brands github title="Octocat, the GitHub logo" >}} source code](https://github.com/samanthacsik/SORTEE-May2023){.btn .btn-secondary role="button"}
+:::
 
 # Abstract 
 
 JavaScript, a programming language used to create dynamic web page content, is becoming an increasingly popular data science tool for building interactive data visualizations. However, learning an entirely new programming language can be time prohibitive and unrealistic for many researchers. Lucky for R users, there’s an app (well, R packages) for that!
 
 In this hands-on live-coding workshop, we’ll explore the {DT}, {plotly}, and {leaflet} packages, which make JavaScript libraries more accessible for R-users looking to infuse their static visualizations with interactivity. Together, we’ll build an interactive table, plot, and map, and demonstrate how these outputs can be shared using open data science communication tools, like RMarkdown and Quarto.
+
+# Audience
+
+This workshop was developed for and taught during the [SORTEE Workshops and Webinar](https://www.sortee.org/other_events/) series.
