--- a/talks_workshops/2021-10-11-teach-me-how-to-google/index.qmd
+++ b/talks_workshops/2021-10-11-teach-me-how-to-google/index.qmd
@@ -16,6 +16,7 @@ image: google.gif
 
 ```{r}
 #| echo: false
+#| out-width: "75%"
 xaringanExtra::embed_xaringan(
   url = "https://ucsb-meds.github.io/teach-me-how-to-google/#1",
   ratio = "4:3"
@@ -24,25 +25,17 @@ xaringanExtra::embed_xaringan(
 
 <br>
 
-<div class="container">
-<div class="center">
-<button type="button" class="button-styling" onclick=window.location.href='https://ucsb-meds.github.io/teach-me-how-to-google/#1'>{{< fa tv title="A television screen" >}} slides</button>
-<button type="button" class="button-styling" onclick=window.location.href='https://github.com/UCSB-MEDS/teach-me-how-to-google'>{{< fa code title="A symbol for code, </>" >}} source code</button> 
-<!-- <button type="button" class="button-styling" onclick=window.location.href='https://samanthacsik.github.io/teach-me-how-to-google/'>`r fontawesome::fa("plus", fill = "#64605f", a11y = "sem")` invited talks</button>  -->
-<button type="button" class="button-styling" onclick=window.location.href='https://drive.google.com/file/d/1eAluhmkL3PBvhYXzQ5T6X6TOO1pQStSQ/view'>{{< fa video title="A video camera" >}} recording</button> 
-</div>
-</div>
-
-# Overview
-
-This talk was originally developed for the [Master of Environmental Data Science (MEDS) program](https://ucsb-meds.github.io/), administered by the [Bren School of Environmental Science & Management](https://bren.ucsb.edu/masters-programs/master-environmental-data-science) in partnership with the [National Center for Ecological Analysis and Synthesis](https://www.nceas.ucsb.edu/).
-
-It's since been given to students from UCSB's [Master of Technology Management Program](https://tmp.ucsb.edu/academics/master-technology-management) (Jan 2022), [R-Ladies St. Louis](https://www.meetup.com/rladies-st-louis/?_cookie-check=tJVp_VfFF4axweCV) (Feb 2022), [The Brown School StatLab](https://gwbweb.wustl.edu/News/Pages/Brown-School-StatLab-offers-statistics-support.aspx) at the University of Washington in St. Louis (Mar 2022), undergraduate students in [UCSB's Environmental Studies Program](https://samanthacsik.github.io/teach-me-how-to-google/slides/WaterData_2022-11-08.html#1) (Nov 2022), and UCSB's [Data Analysis and Coding Club (DAnC)](https://samanthacsik.github.io/teach-me-how-to-google/slides/DAnC-2023-05-17.html#1) (May 2023).
+::: {.center-text}
+[{{< fa tv title="A television screen" >}} slides](https://ucsb-meds.github.io/teach-me-how-to-google/#1){.btn .btn-secondary role="button"} [{{< fa brands github title="Octocat, the GitHub logo" >}} source code](https://github.com/UCSB-MEDS/teach-me-how-to-google){.btn .btn-secondary role="button"}
+:::
 
 # Abstract
 
 Googling for code help is something that all data scientists (at all career stages) do. But figuring out how to get the information you need back can be incredibly challenging, particularly for new coders. In this workshop, we’ll discuss strategies for refining your queries to increase your chances of finding informative solutions.
 
-# Additional versions
+# Audience
 
-I've given this talk to a number of different (non-MEDS) audiences. Most times, the slides remain unchanged (aside from an updated title slide), but there are minor differences here and there depending on audience needs/experiences. Find all additional talk versions [here](https://samanthacsik.github.io/teach-me-how-to-google/)!
+This talk was originally developed for the [Master of Environmental Data Science (MEDS) program](https://ucsb-meds.github.io/), administered by the [Bren School of Environmental Science & Management](https://bren.ucsb.edu/masters-programs/master-environmental-data-science) in partnership with the [National Center for Ecological Analysis and Synthesis](https://www.nceas.ucsb.edu/).
+
+It's since been adapted for a number of non-MEDS audiences, including students from UCSB's [Master of Technology Management Program](https://tmp.ucsb.edu/academics/master-technology-management) (Jan 2022), [R-Ladies St. Louis](https://www.meetup.com/rladies-st-louis/?_cookie-check=tJVp_VfFF4axweCV) (Feb 2022), [The Brown School StatLab](https://gwbweb.wustl.edu/News/Pages/Brown-School-StatLab-offers-statistics-support.aspx) at the University of Washington in St. Louis (Mar 2022), undergraduate students in [UCSB's Environmental Studies Program](https://samanthacsik.github.io/teach-me-how-to-google/slides/WaterData_2022-11-08.html#1) (Nov 2022), and UCSB's [Data Analysis and Coding Club (DAnC)](https://samanthacsik.github.io/teach-me-how-to-google/slides/DAnC-2023-05-17.html#1) (May 2023). Most times, the slides remain unchanged (aside from an updated title slide), but there are minor differences here and there depending on audience needs/experiences. Find all additional talk versions [here](https://samanthacsik.github.io/teach-me-how-to-google/)!
+
