--- a/talks_workshops/2022-10-24-quarto-blogs/index.qmd
+++ b/talks_workshops/2022-10-24-quarto-blogs/index.qmd
@@ -15,22 +15,28 @@ image: penguins.png
 ---
 
 ```{r}
+#| eval: true 
 #| echo: false
-#| fig-cap: "Art by [Allison Horst](https://allisonhorst.com/): Two excited penguins diving off of an iceberg into the ocean. A Quarto logo 'moon' in the sky is reflected in the water that they're diving into."
+#| fig-align: "center"
+#| out-width: "85%" 
+#| fig-alt: "Two excited penguins diving off of an iceberg into the ocean. A Quarto logo 'moon' in the sky is reflected in the water that they're diving into."
 knitr::include_graphics("penguins.png")
 ```
 
-<div class="container">
-<div class="center">
-<button type="button" class="button-styling" onclick=window.location.href='https://samanthacsik.github.io/posts/2022-10-24-quarto-blogs/'>{{< fa blog title="The blog symbol" >}} blog post</button>
-<button type="button" class="button-styling" onclick=window.location.href='https://github.com/samanthacsik/samanthacsik.github.io/blob/main/posts/2022-10-24-quarto-blogs/index.qmd'>{{< fa code title="A symbol for code, </>" >}} source code</button> 
-</div>
-</div>
+::: {.gray-italic .center-text}
+Art by [Allison Horst](https://allisonhorst.com/)
+:::
 
-# Overview
+<br>
 
-This workshop was originally developed for the [Master of Environmental Data Science (MEDS) program](https://ucsb-meds.github.io/), administered by the [Bren School of Environmental Science & Management](https://bren.ucsb.edu/masters-programs/master-environmental-data-science) in partnership with the [National Center for Ecological Analysis and Synthesis](https://www.nceas.ucsb.edu/).
+::: {.center-text}
+[{{< fa blog title="The blog symbol" >}} blogpost](https://samanthacsik.github.io/posts/2022-10-24-quarto-blogs/){.btn .btn-secondary role="button"} [{{< fa brands github title="Octocat, the GitHub logo" >}} source code](https://github.com/samanthacsik/samanthacsik.github.io/blob/main/posts/2022-10-24-quarto-blogs/index.qmd){.btn .btn-secondary role="button"}
+:::
 
 # Abstract 
 
 Blogging about your data science adventures has **a lot** of benefits – it can help you to build your online profile/portfolio, practice your writing and communication skills, stay atop data science trends, solicit feedback from the community, network, learn new skills and/or solidify understanding, combat imposter syndrome, etc. In this workshop, we’ll learn how to add a blog to our Quarto website, customize posts, and (hopefully) get inspired to begin our blogging journeys!
+
+# Audience
+
+This workshop was originally developed for the [Master of Environmental Data Science (MEDS) program](https://ucsb-meds.github.io/), administered by the [Bren School of Environmental Science & Management](https://bren.ucsb.edu/masters-programs/master-environmental-data-science) in partnership with the [National Center for Ecological Analysis and Synthesis](https://www.nceas.ucsb.edu/).
