--- a/talks_workshops/2023-08-03-just-enough-css/index.qmd
+++ b/talks_workshops/2023-08-03-just-enough-css/index.qmd
@@ -17,6 +17,11 @@ draft: true
 
 <center><iframe src="https://samanthacsik.github.io/just-enough-css-sass/#/title-slide" title="Just Enough CSS (and Sass) for data scientists" width="750px," height="550px"></iframe></center>
 
+::: {.center-text}
+[{{< fa tv title="A television screen" >}} slides](https://samanthacsik.github.io/just-enough-css-sass/#/title-slide){.btn role="button"} [{{< fa brands github title="Octocat, the GitHub logo" >}} source code](https://github.com/samanthacsik/just-enough-css-sass){.btn role="button"}
+:::
+
+
 # Abstract
 
 While many of us in the broader data science community may not consider ourselves web developers, tools like Quarto and GitHub have made it more approachable than ever before to create, publish, and share HTML web pages. The default styling of these web pages is pretty sleek -- but knowing even just a little bit of CSS can help you transform your reports, websites, blog posts, presentation slides, etc. into personalized and stand-out web products.
