--- a/resources.qmd
+++ b/resources.qmd
@@ -1,6 +1,7 @@
 ---
 title: "resources"
 subtitle: "a collection of other people's writings, tutorials, etc. that I find particularly helpful"
+title-block-banner: true
 ---
 
 It's finally time for an upgraded notebook! I've been Slacking myself (and subsequently burying) links to resources for far too long, so my favorites will now live here. 
