--- a/projects/2023-06-22-openscapes-website-dev/index.qmd
+++ b/projects/2023-06-22-openscapes-website-dev/index.qmd
@@ -7,3 +7,21 @@ categories: [Quarto website]
 image: openscapes-hex-white-bg.png
 draft: false
 ---
+
+[{{< fa laptop >}} Openscapes website](https://openscapes.org/){.btn} [{{< fa brands github >}} Source code](https://github.com/Openscapes/website-new){.btn} [{{< fa blog >}} Blogpost (coming soon)](){.btn} 
+
+<!-- https://samanthacsik.github.io/posts/2023-07-31-openscapes-website/ -->
+
+<br>
+
+# Project overview
+
+My first freelancing adventure(!) was spent porting the [Openscapes website](https://openscapes.org/) from [`{blogdown}`](https://bookdown.org/yihui/blogdown/) to [Quarto](https://quarto.org/) and redesigning aspects of the website's layout, styling, and overall functionality. I worked closely with [Julie Lowndes](https://jules32.github.io/) (founding director of Openscapes) and [Stefanie Butland](https://stefaniebutland.netlify.app/) (core Openscapes team member) to bring their vision to life and it was *seriously* such a fun project. I wrote a [blog post]() (coming soon!) about my experience / some of the highlights. Check it out!
+
+<br>
+
+<img class="img-styling" src="sy-river.jpeg" alt="A river runs from left to right with a low rocky bank on the left side and a taller tree-covered bluff on the right." width="70%">
+
+::: {.gray-italic .center-text}
+Santa Ynez River, Santa Barbara, CA, where Julie and I spent time brainstorming ideas for the Openscapes website 
+:::
